force-app/main/default/objects/NAM__c/NAM__c.object-meta.xml
<CustomObject>
    <label>NAM</label>
    <nameField>
        <label>NAM Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>NAMs</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>