force-app/main/default/objects/NAM__c/fields/ActionBy__c.field-meta.xml
<CustomField>
    <fullName>ActionBy__c</fullName>
    <label>Action By</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>O&amp;M Contractor (Asset Management)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>