force-app/main/default/objects/NAM__c/fields/ActionTaken__c.field-meta.xml
<CustomField>
    <fullName>ActionTaken__c</fullName>
    <label>Action Taken</label>
    <length>10000</length>
    <type>Html</type>
</CustomField>