force-app/main/default/objects/NAM__c/fields/ActualAmountTotal__c.field-meta.xml
<CustomField>
    <fullName>ActualAmountTotal__c</fullName>
    <formula>ActualMdBAmount__c + ActualMINCAmount__c + ActualMIIAmount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Actual Amount Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>