force-app/main/default/objects/NAM__c/fields/ActualMdBAmount__c.field-meta.xml
<CustomField>
    <fullName>ActualMdBAmount__c</fullName>
    <label>Actual MdB Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>