force-app/main/default/objects/NAM__c/fields/ActualMIIAmount__c.field-meta.xml
<CustomField>
    <fullName>ActualMIIAmount__c</fullName>
    <label>Actual MII Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>