force-app/main/default/objects/NAM__c/fields/ActualMINCAmount__c.field-meta.xml
<CustomField>
    <fullName>ActualMINCAmount__c</fullName>
    <label>Actual MINC Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>