force-app/main/default/objects/NAM__c/fields/AMOSWO__c.field-meta.xml
<CustomField>
    <fullName>AMOSWO__c</fullName>
    <label>WO</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>