force-app/main/default/objects/NAM__c/fields/ApprovedCost__c.field-meta.xml
<CustomField>
    <fullName>ApprovedCost__c</fullName>
    <label>Approved Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>