force-app/main/default/objects/NAM__c/fields/BalanceMdB__c.field-meta.xml
<CustomField>
    <fullName>BalanceMdB__c</fullName>
    <formula>MdBAmount__c - ActualMdBAmount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Balance MdB</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>