force-app/main/default/objects/NAM__c/fields/BalanceMII__c.field-meta.xml
<CustomField>
    <fullName>BalanceMII__c</fullName>
    <formula>MIIAmount__c - ActualMIIAmount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Balance MII</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>