force-app/main/default/objects/NAM__c/fields/BalanceMINC__c.field-meta.xml
<CustomField>
    <fullName>BalanceMINC__c</fullName>
    <formula>MINCAmount__c - ActualMINCAmount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Balance MINC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>