force-app/main/default/objects/NAM__c/fields/BRLAmount__c.field-meta.xml
<CustomField>
    <fullName>BRLAmount__c</fullName>
    <label>BRL Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>