force-app/main/default/objects/NAM__c/fields/BRLRate__c.field-meta.xml
<CustomField>
    <fullName>BRLRate__c</fullName>
    <label>BRL Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>