force-app/main/default/objects/NAM__c/fields/ByPassRename__c.field-meta.xml
<CustomField>
    <fullName>ByPassRename__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ByPass Rename</label>
    <type>Checkbox</type>
</CustomField>