force-app/main/default/objects/NAM__c/fields/CancelReason__c.field-meta.xml
<CustomField>
    <fullName>CancelReason__c</fullName>
    <label>Cancel Reason</label>
    <type>TextArea</type>
</CustomField>