force-app/main/default/objects/NAM__c/fields/ClarificationCreated__c.field-meta.xml
<CustomField>
    <fullName>ClarificationCreated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Clarification Created</label>
    <type>Checkbox</type>
</CustomField>