force-app/main/default/objects/NAM__c/fields/ClosedOutApproved__c.field-meta.xml
<CustomField>
    <fullName>ClosedOutApproved__c</fullName>
    <label>Closed Out Approved</label>
    <type>Date</type>
</CustomField>