force-app/main/default/objects/NAM__c/fields/ClosedOutClarificationCreated__c.field-meta.xml
<CustomField>
    <fullName>ClosedOutClarificationCreated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Closed Out Clarification Created</label>
    <type>Checkbox</type>
</CustomField>