force-app/main/default/objects/NAM__c/fields/ClosedOutStatus__c.field-meta.xml
<CustomField>
    <fullName>ClosedOutStatus__c</fullName>
    <label>Closed Out Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Execution</fullName>
            </value>
            <value>
                <fullName>EM</fullName>
            </value>
            <value>
                <fullName>PEM</fullName>
            </value>
            <value>
                <fullName>Tech Team</fullName>
            </value>
            <value>
                <fullName>SPC Partners</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>