force-app/main/default/objects/NAM__c/fields/ColorRating__c.field-meta.xml
<CustomField>
    <fullName>ColorRating__c</fullName>
    <label>ColorRating</label>
    <length>10</length>
    <type>Text</type>
</CustomField>