force-app/main/default/objects/NAM__c/fields/CounterMeasure__c.field-meta.xml
<CustomField>
    <fullName>CounterMeasure__c</fullName>
    <label>Counter Measure</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>