force-app/main/default/objects/NAM__c/fields/CriticalityCategory__c.field-meta.xml
<CustomField>
    <fullName>CriticalityCategory__c</fullName>
    <label>Criticality Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Safety</fullName>
            </value>
            <value>
                <fullName>Shutdown</fullName>
            </value>
            <value>
                <fullName>Regulation</fullName>
            </value>
            <value>
                <fullName>Other Special</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>