force-app/main/default/objects/NAM__c/fields/CriticalityUrgency__c.field-meta.xml
<CustomField>
    <fullName>CriticalityUrgency__c</fullName>
    <label>Criticality Urgency</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Within 24 Hours</fullName>
            </value>
            <value>
                <fullName>Within 1 Week</fullName>
            </value>
            <value>
                <fullName>Within 1 Month</fullName>
            </value>
            <value>
                <fullName>Within 1 Year</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>