force-app/main/default/objects/NAM__c/fields/EM__c.field-meta.xml
<CustomField>
    <fullName>EM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>EM</label>
    <referenceTo>User</referenceTo>
    <relationshipName>NAMEMs</relationshipName>
    <type>Lookup</type>
</CustomField>