force-app/main/default/objects/NAM__c/fields/EscalationRisk__c.field-meta.xml
<CustomField>
    <fullName>EscalationRisk__c</fullName>
    <label>Escalation Risk</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>