force-app/main/default/objects/NAM__c/fields/ExecutionStatus__c.field-meta.xml
<CustomField>
    <fullName>ExecutionStatus__c</fullName>
    <label>Execution Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ongoing</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>