force-app/main/default/objects/NAM__c/fields/FeedbackDescription__c.field-meta.xml
<CustomField>
    <fullName>FeedbackDescription__c</fullName>
    <label>Feedback Description</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>