force-app/main/default/objects/NAM__c/fields/FeedbackEPCI__c.field-meta.xml
<CustomField>
    <fullName>FeedbackEPCI__c</fullName>
    <label>Feedback to EPCI</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Required</fullName>
            </value>
            <value>
                <fullName>Not Required</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>