force-app/main/default/objects/NAM__c/fields/FeedbackFormNumber__c.field-meta.xml
<CustomField>
    <fullName>FeedbackFormNumber__c</fullName>
    <label>Feedback Form Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>