force-app/main/default/objects/NAM__c/fields/FinalBearer__c.field-meta.xml
<CustomField>
    <fullName>FinalBearer__c</fullName>
    <label>Final Bearer</label>
    <type>TextArea</type>
</CustomField>