force-app/main/default/objects/NAM__c/fields/FutherAssetDamage__c.field-meta.xml
<CustomField>
    <fullName>FutherAssetDamage__c</fullName>
    <label>Further Asset Damage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>&lt;USD 20K</fullName>
            </value>
            <value>
                <fullName>&lt;USD 100K</fullName>
            </value>
            <value>
                <fullName>&lt;USD 500K</fullName>
            </value>
            <value>
                <fullName>&lt;USD 1M</fullName>
            </value>
            <value>
                <fullName>&gt;USD 1M</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>