force-app/main/default/objects/NAM__c/fields/FutherRating__c.field-meta.xml
<CustomField>
    <fullName>FutherRating__c</fullName>
    <formula>IF(TEXT( FutherAssetDamage__c ) = &apos;&lt;USD 20K&apos;, 1,  
  IF(TEXT(FutherAssetDamage__c) = &apos;&lt;USD 100K&apos;, 2,
     IF(TEXT(FutherAssetDamage__c) = &apos;&lt;USD 500K&apos;, 3,
       IF(TEXT(FutherAssetDamage__c) = &apos;&lt;USD 1M&apos;, 4,
          IF(TEXT(FutherAssetDamage__c) = &apos;&gt;USD 1M&apos;, 5, 0)
       )
     )
   )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Futher Rating</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>