force-app/main/default/objects/NAM__c/fields/LessonLearnedList__c.field-meta.xml
<CustomField>
    <fullName>LessonLearnedList__c</fullName>
    <label>Lesson Learned List</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Added</fullName>
            </value>
            <value>
                <fullName>To be added</fullName>
            </value>
            <value>
                <fullName>Not required</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>