force-app/main/default/objects/NAM__c/fields/MarubeniApprovalDate__c.field-meta.xml
<CustomField>
    <fullName>MarubeniApprovalDate__c</fullName>
    <label>Marubeni Approval Date</label>
    <type>Date</type>
</CustomField>