force-app/main/default/objects/NAM__c/fields/MarubeniClosedOutApprovalDate__c.field-meta.xml
<CustomField>
    <fullName>MarubeniClosedOutApprovalDate__c</fullName>
    <label>Marubeni Closed Out Approval Date</label>
    <type>Date</type>
</CustomField>