force-app/main/default/objects/NAM__c/fields/MarubeniClosedOutStatus__c.field-meta.xml
<CustomField>
    <fullName>MarubeniClosedOutStatus__c</fullName>
    <label>Marubeni Closed Out Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ClarificationStatus</valueSetName>
    </valueSet>
</CustomField>