force-app/main/default/objects/NAM__c/fields/MaterialMdBAmount__c.field-meta.xml
<CustomField>
    <fullName>MaterialMdBAmount__c</fullName>
    <label>Material MdB Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>