force-app/main/default/objects/NAM__c/fields/MaterialMIIAmount__c.field-meta.xml
<CustomField>
    <fullName>MaterialMIIAmount__c</fullName>
    <label>Material MII Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>