force-app/main/default/objects/NAM__c/fields/MaterialMINCAmount__c.field-meta.xml
<CustomField>
    <fullName>MaterialMINCAmount__c</fullName>
    <label>Material MINC Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>