force-app/main/default/objects/NAM__c/fields/MdBAmount__c.field-meta.xml
<CustomField>
    <fullName>MdBAmount__c</fullName>
    <inlineHelpText>Imported from 1nd WO</inlineHelpText>
    <label>MdB Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>