force-app/main/default/objects/NAM__c/fields/MdBApprovalDate__c.field-meta.xml
<CustomField>
    <fullName>MdBApprovalDate__c</fullName>
    <label>MdB Approval Date</label>
    <type>Date</type>
</CustomField>