force-app/main/default/objects/NAM__c/fields/MdbCloseOutApprovalDate__c.field-meta.xml
<CustomField>
    <fullName>MdbCloseOutApprovalDate__c</fullName>
    <label>MdB Close Out Approval Date</label>
    <type>Date</type>
</CustomField>