force-app/main/default/objects/NAM__c/fields/MIIAmount__c.field-meta.xml
<CustomField>
    <fullName>MIIAmount__c</fullName>
    <inlineHelpText>Imported from 2nd WO</inlineHelpText>
    <label>MII Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>