force-app/main/default/objects/NAM__c/fields/MINCAmount__c.field-meta.xml
<CustomField>
    <fullName>MINCAmount__c</fullName>
    <inlineHelpText>Imported from 3nd WO</inlineHelpText>
    <label>MINC Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>