force-app/main/default/objects/NAM__c/fields/MINCApprovalDate__c.field-meta.xml
<CustomField>
    <fullName>MINCApprovalDate__c</fullName>
    <label>MINC Approval Date</label>
    <type>Date</type>
</CustomField>