force-app/main/default/objects/NAM__c/fields/MINCClosedOutApprovalDate__c.field-meta.xml
<CustomField>
    <fullName>MINCClosedOutApprovalDate__c</fullName>
    <label>MINC Closed Out Approval Date</label>
    <type>Date</type>
</CustomField>