force-app/main/default/objects/NAM__c/fields/MINCStatus__c.field-meta.xml
<CustomField>
    <fullName>MINCStatus__c</fullName>
    <label>MINC Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ClarificationStatus</valueSetName>
    </valueSet>
</CustomField>