force-app/main/default/objects/NAM__c/fields/MitsuiApprovalDate__c.field-meta.xml
<CustomField>
    <fullName>MitsuiApprovalDate__c</fullName>
    <label>Mitsui Approval Date</label>
    <type>Date</type>
</CustomField>