force-app/main/default/objects/NAM__c/fields/MitsuiClosedOutApprovalDate__c.field-meta.xml
<CustomField>
    <fullName>MitsuiClosedOutApprovalDate__c</fullName>
    <label>Mitsui Closed Out Approval Date</label>
    <type>Date</type>
</CustomField>