force-app/main/default/objects/NAM__c/fields/MOC__c.field-meta.xml
<CustomField>
    <fullName>MOC__c</fullName>
    <label>MOC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>