force-app/main/default/objects/NAM__c/fields/MOLApprovalDate__c.field-meta.xml
<CustomField>
    <fullName>MOLApprovalDate__c</fullName>
    <label>MOL Approval Date</label>
    <type>Date</type>
</CustomField>