force-app/main/default/objects/NAM__c/fields/MOLClosedOutApprovalDate__c.field-meta.xml
<CustomField>
    <fullName>MOLClosedOutApprovalDate__c</fullName>
    <label>MOL Closed Out Approval Date</label>
    <type>Date</type>
</CustomField>