force-app/main/default/objects/NAM__c/fields/MOLClosedOutStatus__c.field-meta.xml
<CustomField>
    <fullName>MOLClosedOutStatus__c</fullName>
    <label>MOL Closed Out Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ClarificationStatus</valueSetName>
    </valueSet>
</CustomField>