force-app/main/default/objects/NAM__c/fields/MOLStatus__c.field-meta.xml
<CustomField>
    <fullName>MOLStatus__c</fullName>
    <label>MOL Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ClarificationStatus</valueSetName>
    </valueSet>
</CustomField>