force-app/main/default/objects/NAM__c/fields/NAMActionCompletionActual__c.field-meta.xml
<CustomField>
    <fullName>NAMActionCompletionActual__c</fullName>
    <label>NAM Action Completion Actual</label>
    <type>Date</type>
</CustomField>