force-app/main/default/objects/NAM__c/fields/NAMActionCompletionForecast__c.field-meta.xml
<CustomField>
    <fullName>NAMActionCompletionForecast__c</fullName>
    <label>NAM Action Completion Forecast</label>
    <type>Date</type>
</CustomField>