force-app/main/default/objects/NAM__c/fields/NAMActionCompletionPlan__c.field-meta.xml
<CustomField>
    <fullName>NAMActionCompletionPlan__c</fullName>
    <label>NAM Action Completion Plan</label>
    <type>Date</type>
</CustomField>