force-app/main/default/objects/NAM__c/fields/NAMApproved__c.field-meta.xml
<CustomField>
    <fullName>NAMApproved__c</fullName>
    <label>NAM Approved</label>
    <type>Date</type>
</CustomField>