force-app/main/default/objects/NAM__c/fields/NameWithoutRevision__c.field-meta.xml
<CustomField>
    <fullName>NameWithoutRevision__c</fullName>
    <label>Name Without Revision</label>
    <length>255</length>
    <type>Text</type>
</CustomField>