force-app/main/default/objects/NAM__c/fields/NAMRevision__c.field-meta.xml
<CustomField>
    <fullName>NAMRevision__c</fullName>
    <formula>IF(TEXT(ClosedOutStatus__c) &lt;&gt; &apos;&apos;, TEXT(Revision__c) + &apos;-&apos; +  Text(RevisionCO__c), text(Revision__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NAM Revision</label>
    <type>Text</type>
</CustomField>