force-app/main/default/objects/NAM__c/fields/NAMStatus__c.field-meta.xml
<CustomField>
    <fullName>NAMStatus__c</fullName>
    <formula>if(Text(ClosedOutStatus__c ) = &apos;Approved&apos;, IMAGE(&quot;/resource/nam_status/completed.png&quot; , &quot;Chat&quot;, 20,20 ), 
   if(Text(Status__c ) = &apos;Cancelled&apos;, IMAGE(&quot;/resource/nam_status/cancelled.png&quot;, &quot;Cancelled&quot;, 20,20 ), IMAGE(&quot;/resource/nam_status/pending1.png&quot;, &quot;In Progress&quot;, 20, 20))
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NAM Status</label>
    <type>Text</type>
</CustomField>