force-app/main/default/objects/NAM__c/fields/NOINo__c.field-meta.xml
<CustomField>
    <fullName>NOINo__c</fullName>
    <label>NOI No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>