force-app/main/default/objects/NAM__c/fields/OM__c.field-meta.xml
<CustomField>
    <fullName>OM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>OM</label>
    <referenceTo>User</referenceTo>
    <relationshipName>NAMs</relationshipName>
    <type>Lookup</type>
</CustomField>