force-app/main/default/objects/NAM__c/fields/ParentNAM__c.field-meta.xml
<CustomField>
    <fullName>ParentNAM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent NAM</label>
    <referenceTo>NAM__c</referenceTo>
    <relationshipLabel>Revision NAMs</relationshipLabel>
    <relationshipName>NAMs</relationshipName>
    <type>Lookup</type>
</CustomField>