force-app/main/default/objects/NAM__c/fields/PEM__c.field-meta.xml
<CustomField>
    <fullName>PEM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PEM</label>
    <referenceTo>User</referenceTo>
    <relationshipName>NAMs1</relationshipName>
    <type>Lookup</type>
</CustomField>