force-app/main/default/objects/NAM__c/fields/PEMClosedOut__c.field-meta.xml
<CustomField>
    <fullName>PEMClosedOut__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PEM Closed Out</label>
    <referenceTo>User</referenceTo>
    <relationshipName>NAMPEMClosedOut</relationshipName>
    <type>Lookup</type>
</CustomField>