force-app/main/default/objects/NAM__c/fields/Phase__c.field-meta.xml
<CustomField>
    <fullName>Phase__c</fullName>
    <formula>IF(
    NOT(ISPICKVAL(Status__c, &apos;Approved&apos;)),
    &apos;NAM&apos;,
    &apos;Closed Out&apos;
)</formula>
    <label>Phase</label>
    <type>Text</type>
</CustomField>