force-app/main/default/objects/NAM__c/fields/PotentialPenalty__c.field-meta.xml
<CustomField>
    <fullName>PotentialPenalty__c</fullName>
    <label>Potential Penalty / Rate Reduction</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>&lt;USD 100K</fullName>
            </value>
            <value>
                <fullName>&lt;USD 500K</fullName>
            </value>
            <value>
                <fullName>&lt;USD 1M</fullName>
            </value>
            <value>
                <fullName>&gt;USD 1M</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>