force-app/main/default/objects/NAM__c/fields/PotentialRating__c.field-meta.xml
<CustomField>
    <fullName>PotentialRating__c</fullName>
    <formula>IF(text(PotentialPenalty__c) =&apos;No&apos;, 1,
  IF(Text(PotentialPenalty__c) = &apos;&lt;USD 100K&apos;, 2,
    IF(text(PotentialPenalty__c) = &apos;&gt;USD 1M&apos;, 5,
      IF(Text(PotentialPenalty__c) = &apos;&lt;USD 1M&apos;, 4, 
        IF(text(PotentialPenalty__c) = &apos;&lt;USD 500K&apos;, 3, 0)
      ) 
    )
  )
)</formula>
    <label>Potential Rating</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>