force-app/main/default/objects/NAM__c/fields/Probability__c.field-meta.xml
<CustomField>
    <fullName>Probability__c</fullName>
    <label>Probability</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
                <label>A - Never heard in MODEC</label>
            </value>
            <value>
                <fullName>B</fullName>
                <label>B - Has occurred in MODEC</label>
            </value>
            <value>
                <fullName>C</fullName>
                <label>C - Occurred several times a year in MODEC</label>
            </value>
            <value>
                <fullName>D</fullName>
                <label>D - Occurred several times a year in the unit</label>
            </value>
            <value>
                <fullName>A - Never heard in MODEC</fullName>
                <isActive>false</isActive>
                <label>A - Never heard in MODEC</label>
            </value>
            <value>
                <fullName>B - Has occurred in MODEC</fullName>
                <isActive>false</isActive>
                <label>B - Has occurred in MODEC</label>
            </value>
            <value>
                <fullName>C - Occurred several times a year in MODEC</fullName>
                <isActive>false</isActive>
                <label>C - Occurred several times a year in MODEC</label>
            </value>
            <value>
                <fullName>D - Occurred several times a  year in the unit</fullName>
                <isActive>false</isActive>
                <label>D - Occurred several times a  year in the unit</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>