force-app/main/default/objects/NAM__c/fields/ProbabilityRating__c.field-meta.xml
<CustomField>
    <fullName>ProbabilityRating__c</fullName>
    <formula>if(NOT(ISBLANK(ColorRating__c)), IMAGE(&quot;/resource/img_risk/&quot; + ColorRating__c  + &quot;.png&quot; , &quot;Chat&quot;), &apos;---&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Risk Rating</label>
    <type>Text</type>
</CustomField>