force-app/main/default/objects/NAM__c/fields/ProjectDuration__c.field-meta.xml
<CustomField>
    <fullName>ProjectDuration__c</fullName>
    <inlineHelpText>Days</inlineHelpText>
    <label>Project Duration</label>
    <length>255</length>
    <type>Text</type>
</CustomField>