force-app/main/default/objects/NAM__c/fields/RatingImage__c.field-meta.xml
<CustomField>
    <fullName>RatingImage__c</fullName>
    <formula>IMAGE(&quot;/resource/RatingImageV1&quot;, &apos;Risk&apos; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rating Image</label>
    <type>Text</type>
</CustomField>