force-app/main/default/objects/NAM__c/fields/RatingSafety__c.field-meta.xml
<CustomField>
    <fullName>RatingSafety__c</fullName>
    <formula>IF(TEXT(Safety__c) = &apos;No injury&apos;, 1,  
    IF(TEXT(Safety__c) = &apos;Slight injury&apos;, 2,
     IF(TEXT(Safety__c) = &apos;Minor injury&apos;, 3,
       IF(TEXT(Safety__c) = &apos;Major injury&apos;, 4,
          IF(TEXT(Safety__c) = &apos;Single fatality&apos;, 5, 0 )
     )
   )
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rating People</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>