force-app/main/default/objects/NAM__c/fields/RCACompletionForecast__c.field-meta.xml
<CustomField>
    <fullName>RCACompletionForecast__c</fullName>
    <label>RCA Completion Forecast</label>
    <type>Date</type>
</CustomField>