force-app/main/default/objects/NAM__c/fields/RCACompletionPlan__c.field-meta.xml
<CustomField>
    <fullName>RCACompletionPlan__c</fullName>
    <label>RCA Completion Plan</label>
    <type>Date</type>
</CustomField>