force-app/main/default/objects/NAM__c/fields/RCASessionWithSPCTech__c.field-meta.xml
<CustomField>
    <fullName>RCASessionWithSPCTech__c</fullName>
    <label>RCA Session with SPC Tech</label>
    <type>Date</type>
</CustomField>