force-app/main/default/objects/NAM__c/fields/RCAStatus__c.field-meta.xml
<CustomField>
    <fullName>RCAStatus__c</fullName>
    <label>RCA Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>