force-app/main/default/objects/NAM__c/fields/ReasonforBalance__c.field-meta.xml
<CustomField>
    <fullName>ReasonforBalance__c</fullName>
    <label>Reason for Balance</label>
    <type>TextArea</type>
</CustomField>