force-app/main/default/objects/NAM__c/fields/ReasonWithoutAllTechSupport__c.field-meta.xml
<CustomField>
    <fullName>ReasonWithoutAllTechSupport__c</fullName>
    <label>Reason Without All Tech Supports</label>
    <type>TextArea</type>
</CustomField>