force-app/main/default/objects/NAM__c/fields/ReasonWithoutAllTechSupportCO__c.field-meta.xml
<CustomField>
    <fullName>ReasonWithoutAllTechSupportCO__c</fullName>
    <label>Reason Without All Tech Supports (CO)</label>
    <type>TextArea</type>
</CustomField>