force-app/main/default/objects/NAM__c/fields/ReferenceNAM__c.field-meta.xml
<CustomField>
    <fullName>ReferenceNAM__c</fullName>
    <label>Reference NAM</label>
    <type>TextArea</type>
</CustomField>