force-app/main/default/objects/NAM__c/fields/ResponsibiltyCategory__c.field-meta.xml
<CustomField>
    <fullName>ResponsibiltyCategory__c</fullName>
    <label>Responsibilty Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Warranty</fullName>
            </value>
            <value>
                <fullName>Insurance</fullName>
            </value>
            <value>
                <fullName>SPC</fullName>
            </value>
            <value>
                <fullName>O&amp;M</fullName>
            </value>
            <value>
                <fullName>Client</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
            <value>
                <fullName>Unkown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>