force-app/main/default/objects/NAM__c/fields/ResponsibleForNAM__c.field-meta.xml
<CustomField>
    <fullName>ResponsibleForNAM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Responsible for NAM</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.UserRole.Name</field>
            <operation>equals</operation>
            <value>Technical SPC</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>NAMs4</relationshipName>
    <type>Lookup</type>
</CustomField>